added align itmes

--- a/justify_content.html
+++ b/justify_content.html
@@ -23,12 +23,12 @@
 
     <!-- HASH NAVIGATION -->
     <nav class="hash_navigation">
-      <a href="#justify_center">Justify Center</a>
-      <a href="#justify_start">Justify Start</a>
-      <a href="#justify_end">Justify End </a>
-      <a href="#justify_around">Justify Space Around</a>
-      <a href="#justify_between">Justify Space Between</a>
-      <a href="#justify_evenly">Justify Space Evenly</a>
+      <a href="#justify_center"> Center</a>
+      <a href="#justify_start"> Start</a>
+      <a href="#justify_end"> End </a>
+      <a href="#justify_around"> Space Around</a>
+      <a href="#justify_between"> Space Between</a>
+      <a href="#justify_evenly"> Space Evenly</a>
     </nav>
     <!-- END HASH NAVIGATION -->
 
